removing unnecessary libraries.

--- a/notebooks/01_data_setup.ipynb
+++ b/notebooks/01_data_setup.ipynb
@@ -25,10 +25,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from src.__00__paths import raw_data_dir, processed_data_dir, curated_data_dir\n",
+    "from src.__00__paths import raw_data_dir, processed_data_dir\n",
     "from pathlib import Path\n",
-    "import shutil\n",
-    "from sklearn.model_selection import train_test_split"
+    "import shutil"
    ],
    "id": "da192187edd5d186",
    "outputs": [],
