Simplify and truncate data setup

--- a/notebooks/01_data_setup.ipynb
+++ b/notebooks/01_data_setup.ipynb
@@ -15,27 +15,32 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:33.803917Z",
-     "start_time": "2025-08-09T14:08:33.801396Z"
+     "end_time": "2025-08-09T14:12:42.197851Z",
+     "start_time": "2025-08-09T14:12:42.192983Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# Data Access & Management\n",
     "import kagglehub\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from src.__00__paths import raw_data_dir, processed_data_dir\n",
+    "# Project Structure\n",
     "from pathlib import Path\n",
     "import shutil\n",
+    "from src.__00__paths import raw_data_dir, processed_data_dir\n",
     "\n",
+    "# Machine Learning Tools\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
-    "import matplotlib.pyplot as plt"
+    "\n",
+    "# Visualization\n",
+    "import matplotlib.pyplot as plt\n"
    ],
    "id": "da192187edd5d186",
    "outputs": [],
-   "execution_count": 68
+   "execution_count": 81
   },
   {
    "metadata": {},
