save clean data (pre scaled)

--- a/notebooks/01_data_setup.ipynb
+++ b/notebooks/01_data_setup.ipynb
@@ -599,6 +599,37 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "## Save Clean Data",
+   "id": "ead71c53bf105eac"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-09T15:30:57.814196Z",
+     "start_time": "2025-08-09T15:30:57.737722Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "clean_path = processed_data_dir / \"clean_pre_scaled.csv\"\n",
+    "df.to_csv(clean_path, index=False)\n",
+    "print(f\"✔️ Clean (pre-scaled) saved → {'/'.join(clean_path.parts[-3:])}\")"
+   ],
+   "id": "9974724911748f1b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✔️ Clean (pre-scaled) saved → data/processed/clean_pre_scaled.csv\n"
+     ]
+    }
+   ],
+   "execution_count": 82
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "## Feature Normalizing",
    "id": "7a6d5db127d68f88"
   },
@@ -706,8 +737,8 @@
     "explained_var = np.cumsum(pca.explained_variance_ratio_)\n",
     "\n",
     "# Plot cumulative explained variance\n",
-    "plt.figure(figsize=(8,5))\n",
-    "plt.plot(range(1, len(explained_var)+1), explained_var, marker='o')\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.plot(range(1, len(explained_var) + 1), explained_var, marker='o')\n",
     "plt.axhline(y=0.95, color='r', linestyle='--')\n",
     "plt.xlabel('Number of Components')\n",
     "plt.ylabel('Cumulative Explained Variance')\n",
