rename pre-scaled data file

--- a/notebooks/01_data_setup.ipynb
+++ b/notebooks/01_data_setup.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:12:42.197851Z",
-     "start_time": "2025-08-09T14:12:42.192983Z"
+     "end_time": "2025-08-09T16:09:41.574501Z",
+     "start_time": "2025-08-09T16:09:41.571638Z"
     }
    },
    "cell_type": "code",
@@ -40,7 +40,7 @@
    ],
    "id": "da192187edd5d186",
    "outputs": [],
-   "execution_count": 81
+   "execution_count": 83
   },
   {
    "metadata": {},
@@ -51,8 +51,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:34.175596Z",
-     "start_time": "2025-08-09T14:08:33.807590Z"
+     "end_time": "2025-08-09T16:09:41.592226Z",
+     "start_time": "2025-08-09T16:09:41.588787Z"
     }
    },
    "cell_type": "code",
@@ -87,11 +87,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✔️ Dataset successfully downloaded.\n"
+      "✔️ Dataset is already downloaded.\n"
      ]
     }
    ],
-   "execution_count": 69
+   "execution_count": 84
   },
   {
    "metadata": {},
@@ -102,15 +102,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:34.196251Z",
-     "start_time": "2025-08-09T14:08:34.184749Z"
+     "end_time": "2025-08-09T16:09:41.609819Z",
+     "start_time": "2025-08-09T16:09:41.601386Z"
     }
    },
    "cell_type": "code",
    "source": "raw_df = pd.read_csv(raw_dataset)",
    "id": "bb57ce44f0659b10",
    "outputs": [],
-   "execution_count": 70
+   "execution_count": 85
   },
   {
    "metadata": {},
@@ -121,8 +121,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:34.213727Z",
-     "start_time": "2025-08-09T14:08:34.202936Z"
+     "end_time": "2025-08-09T16:09:41.623444Z",
+     "start_time": "2025-08-09T16:09:41.614722Z"
     }
    },
    "cell_type": "code",
@@ -295,13 +295,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 71
+   "execution_count": 86
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:34.226232Z",
-     "start_time": "2025-08-09T14:08:34.219008Z"
+     "end_time": "2025-08-09T16:09:41.641026Z",
+     "start_time": "2025-08-09T16:09:41.634884Z"
     }
    },
    "cell_type": "code",
@@ -481,12 +481,12 @@
        "</div>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 72
+   "execution_count": 87
   },
   {
    "metadata": {},
@@ -503,8 +503,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:34.280451Z",
-     "start_time": "2025-08-09T14:08:34.277274Z"
+     "end_time": "2025-08-09T16:09:41.693135Z",
+     "start_time": "2025-08-09T16:09:41.690293Z"
     }
    },
    "cell_type": "code",
@@ -515,7 +515,7 @@
    ],
    "id": "79a13b6b1f4616e6",
    "outputs": [],
-   "execution_count": 73
+   "execution_count": 88
   },
   {
    "metadata": {},
@@ -530,8 +530,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:34.333774Z",
-     "start_time": "2025-08-09T14:08:34.330243Z"
+     "end_time": "2025-08-09T16:09:41.730985Z",
+     "start_time": "2025-08-09T16:09:41.727317Z"
     }
    },
    "cell_type": "code",
@@ -546,7 +546,7 @@
    ],
    "id": "36384297ad9e6232",
    "outputs": [],
-   "execution_count": 74
+   "execution_count": 89
   },
   {
    "metadata": {},
@@ -560,8 +560,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:34.349928Z",
-     "start_time": "2025-08-09T14:08:34.347151Z"
+     "end_time": "2025-08-09T16:09:41.748080Z",
+     "start_time": "2025-08-09T16:09:41.745129Z"
     }
    },
    "cell_type": "code",
@@ -573,13 +573,13 @@
    ],
    "id": "a068a59bb9cf0aa6",
    "outputs": [],
-   "execution_count": 75
+   "execution_count": 90
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:34.363272Z",
-     "start_time": "2025-08-09T14:08:34.361603Z"
+     "end_time": "2025-08-09T16:09:41.758378Z",
+     "start_time": "2025-08-09T16:09:41.756554Z"
     }
    },
    "cell_type": "code",
@@ -594,7 +594,7 @@
      ]
     }
    ],
-   "execution_count": 76
+   "execution_count": 91
   },
   {
    "metadata": {},
@@ -605,13 +605,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T15:30:57.814196Z",
-     "start_time": "2025-08-09T15:30:57.737722Z"
+     "end_time": "2025-08-09T16:09:41.785768Z",
+     "start_time": "2025-08-09T16:09:41.766075Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "clean_path = processed_data_dir / \"clean_pre_scaled.csv\"\n",
+    "clean_path = processed_data_dir / \"clean_preScaled_data.csv\"\n",
     "df.to_csv(clean_path, index=False)\n",
     "print(f\"✔️ Clean (pre-scaled) saved → {'/'.join(clean_path.parts[-3:])}\")"
    ],
@@ -621,11 +621,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✔️ Clean (pre-scaled) saved → data/processed/clean_pre_scaled.csv\n"
+      "✔️ Clean (pre-scaled) saved → data/processed/clean_preScaled_data.csv\n"
      ]
     }
    ],
-   "execution_count": 82
+   "execution_count": 92
   },
   {
    "metadata": {},
@@ -636,8 +636,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:34.386268Z",
-     "start_time": "2025-08-09T14:08:34.372571Z"
+     "end_time": "2025-08-09T16:09:41.814371Z",
+     "start_time": "2025-08-09T16:09:41.801761Z"
     }
    },
    "cell_type": "code",
@@ -675,7 +675,7 @@
      ]
     }
    ],
-   "execution_count": 77
+   "execution_count": 93
   },
   {
    "metadata": {},
@@ -686,8 +686,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:34.398773Z",
-     "start_time": "2025-08-09T14:08:34.395858Z"
+     "end_time": "2025-08-09T16:09:41.829590Z",
+     "start_time": "2025-08-09T16:09:41.825672Z"
     }
    },
    "cell_type": "code",
@@ -713,7 +713,7 @@
    ],
    "id": "8c81c1d9e06bcb97",
    "outputs": [],
-   "execution_count": 78
+   "execution_count": 94
   },
   {
    "metadata": {},
@@ -724,8 +724,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:34.448631Z",
-     "start_time": "2025-08-09T14:08:34.401818Z"
+     "end_time": "2025-08-09T16:09:41.884053Z",
+     "start_time": "2025-08-09T16:09:41.832476Z"
     }
    },
    "cell_type": "code",
@@ -774,7 +774,7 @@
      ]
     }
    ],
-   "execution_count": 79
+   "execution_count": 95
   },
   {
    "metadata": {},
@@ -794,8 +794,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T14:08:34.564499Z",
-     "start_time": "2025-08-09T14:08:34.464721Z"
+     "end_time": "2025-08-09T16:09:42.009165Z",
+     "start_time": "2025-08-09T16:09:41.899259Z"
     }
    },
    "cell_type": "code",
@@ -983,12 +983,12 @@
        "</div>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 80
+   "execution_count": 96
   }
  ],
  "metadata": {
