save cleaned data

--- a/notebooks/01_data_setup.ipynb
+++ b/notebooks/01_data_setup.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.574501Z",
-     "start_time": "2025-08-09T16:09:41.571638Z"
+     "end_time": "2025-08-09T16:28:18.483974Z",
+     "start_time": "2025-08-09T16:28:18.481053Z"
     }
    },
    "cell_type": "code",
@@ -40,7 +40,7 @@
    ],
    "id": "da192187edd5d186",
    "outputs": [],
-   "execution_count": 83
+   "execution_count": 40
   },
   {
    "metadata": {},
@@ -51,8 +51,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.592226Z",
-     "start_time": "2025-08-09T16:09:41.588787Z"
+     "end_time": "2025-08-09T16:28:18.492589Z",
+     "start_time": "2025-08-09T16:28:18.489167Z"
     }
    },
    "cell_type": "code",
@@ -91,7 +91,7 @@
      ]
     }
    ],
-   "execution_count": 84
+   "execution_count": 41
   },
   {
    "metadata": {},
@@ -102,15 +102,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.609819Z",
-     "start_time": "2025-08-09T16:09:41.601386Z"
+     "end_time": "2025-08-09T16:28:18.529546Z",
+     "start_time": "2025-08-09T16:28:18.521840Z"
     }
    },
    "cell_type": "code",
    "source": "raw_df = pd.read_csv(raw_dataset)",
    "id": "bb57ce44f0659b10",
    "outputs": [],
-   "execution_count": 85
+   "execution_count": 42
   },
   {
    "metadata": {},
@@ -121,8 +121,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.623444Z",
-     "start_time": "2025-08-09T16:09:41.614722Z"
+     "end_time": "2025-08-09T16:28:18.542534Z",
+     "start_time": "2025-08-09T16:28:18.534150Z"
     }
    },
    "cell_type": "code",
@@ -295,13 +295,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 86
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.641026Z",
-     "start_time": "2025-08-09T16:09:41.634884Z"
+     "end_time": "2025-08-09T16:28:18.557643Z",
+     "start_time": "2025-08-09T16:28:18.551796Z"
     }
    },
    "cell_type": "code",
@@ -481,12 +481,12 @@
        "</div>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 87
+   "execution_count": 44
   },
   {
    "metadata": {},
@@ -503,8 +503,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.693135Z",
-     "start_time": "2025-08-09T16:09:41.690293Z"
+     "end_time": "2025-08-09T16:28:18.608233Z",
+     "start_time": "2025-08-09T16:28:18.605224Z"
     }
    },
    "cell_type": "code",
@@ -515,7 +515,7 @@
    ],
    "id": "79a13b6b1f4616e6",
    "outputs": [],
-   "execution_count": 88
+   "execution_count": 45
   },
   {
    "metadata": {},
@@ -530,8 +530,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.730985Z",
-     "start_time": "2025-08-09T16:09:41.727317Z"
+     "end_time": "2025-08-09T16:28:18.644015Z",
+     "start_time": "2025-08-09T16:28:18.640216Z"
     }
    },
    "cell_type": "code",
@@ -546,7 +546,7 @@
    ],
    "id": "36384297ad9e6232",
    "outputs": [],
-   "execution_count": 89
+   "execution_count": 46
   },
   {
    "metadata": {},
@@ -560,8 +560,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.748080Z",
-     "start_time": "2025-08-09T16:09:41.745129Z"
+     "end_time": "2025-08-09T16:28:18.657843Z",
+     "start_time": "2025-08-09T16:28:18.654870Z"
     }
    },
    "cell_type": "code",
@@ -573,13 +573,13 @@
    ],
    "id": "a068a59bb9cf0aa6",
    "outputs": [],
-   "execution_count": 90
+   "execution_count": 47
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.758378Z",
-     "start_time": "2025-08-09T16:09:41.756554Z"
+     "end_time": "2025-08-09T16:28:18.663050Z",
+     "start_time": "2025-08-09T16:28:18.661600Z"
     }
    },
    "cell_type": "code",
@@ -594,7 +594,7 @@
      ]
     }
    ],
-   "execution_count": 91
+   "execution_count": 48
   },
   {
    "metadata": {},
@@ -605,14 +605,26 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.785768Z",
-     "start_time": "2025-08-09T16:09:41.766075Z"
+     "end_time": "2025-08-09T16:28:18.690474Z",
+     "start_time": "2025-08-09T16:28:18.669674Z"
     }
    },
    "cell_type": "code",
    "source": [
     "clean_path = processed_data_dir / \"clean_preScaled_data.csv\"\n",
-    "df.to_csv(clean_path, index=False)\n",
+    "clean_prescaled_df = df.copy()\n",
+    "\n",
+    "clean_prescaled_df['residence_type'] = clean_prescaled_df['residence_type'].map({0: 'Urban', 1: 'Rural'})\n",
+    "clean_prescaled_df['gender'] = clean_prescaled_df['gender'].map({0: 'Female', 1: 'Male'})\n",
+    "clean_prescaled_df['gender'] = clean_prescaled_df['gender'].map({0: 'Female', 1: 'Male'})\n",
+    "\n",
+    "clean_prescaled_df['smoking_status'] = clean_prescaled_df['smoker'].map({1: \"Smoker\", -1: \"Non-Smoker\", 0: \"Unknown\"})\n",
+    "clean_prescaled_df.drop(columns=['smoker'], inplace=True)\n",
+    "\n",
+    "clean_prescaled_df['bmi'] = clean_prescaled_df['bmi'].round(2)\n",
+    "clean_prescaled_df['diabetes_pedigree'] = clean_prescaled_df['diabetes_pedigree'].round(3)\n",
+    "\n",
+    "clean_prescaled_df.to_csv(clean_path, index=False)\n",
     "print(f\"✔️ Clean (pre-scaled) saved → {'/'.join(clean_path.parts[-3:])}\")"
    ],
    "id": "9974724911748f1b",
@@ -625,7 +637,7 @@
      ]
     }
    ],
-   "execution_count": 92
+   "execution_count": 49
   },
   {
    "metadata": {},
@@ -636,8 +648,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.814371Z",
-     "start_time": "2025-08-09T16:09:41.801761Z"
+     "end_time": "2025-08-09T16:28:18.715459Z",
+     "start_time": "2025-08-09T16:28:18.702243Z"
     }
    },
    "cell_type": "code",
@@ -675,7 +687,7 @@
      ]
     }
    ],
-   "execution_count": 93
+   "execution_count": 50
   },
   {
    "metadata": {},
@@ -686,8 +698,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.829590Z",
-     "start_time": "2025-08-09T16:09:41.825672Z"
+     "end_time": "2025-08-09T16:28:18.724575Z",
+     "start_time": "2025-08-09T16:28:18.721598Z"
     }
    },
    "cell_type": "code",
@@ -713,7 +725,7 @@
    ],
    "id": "8c81c1d9e06bcb97",
    "outputs": [],
-   "execution_count": 94
+   "execution_count": 51
   },
   {
    "metadata": {},
@@ -724,8 +736,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:41.884053Z",
-     "start_time": "2025-08-09T16:09:41.832476Z"
+     "end_time": "2025-08-09T16:28:18.775808Z",
+     "start_time": "2025-08-09T16:28:18.726846Z"
     }
    },
    "cell_type": "code",
@@ -774,7 +786,7 @@
      ]
     }
    ],
-   "execution_count": 95
+   "execution_count": 52
   },
   {
    "metadata": {},
@@ -794,8 +806,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:09:42.009165Z",
-     "start_time": "2025-08-09T16:09:41.899259Z"
+     "end_time": "2025-08-09T16:28:18.897945Z",
+     "start_time": "2025-08-09T16:28:18.790330Z"
     }
    },
    "cell_type": "code",
@@ -983,12 +995,12 @@
        "</div>"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 96
+   "execution_count": 53
   }
  ],
  "metadata": {
