save cleaned data

--- a/notebooks/01_data_setup.ipynb
+++ b/notebooks/01_data_setup.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.483974Z",
-     "start_time": "2025-08-09T16:28:18.481053Z"
+     "end_time": "2025-08-09T16:35:56.165513Z",
+     "start_time": "2025-08-09T16:35:56.161590Z"
     }
    },
    "cell_type": "code",
@@ -40,7 +40,7 @@
    ],
    "id": "da192187edd5d186",
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 69
   },
   {
    "metadata": {},
@@ -51,8 +51,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.492589Z",
-     "start_time": "2025-08-09T16:28:18.489167Z"
+     "end_time": "2025-08-09T16:35:56.182638Z",
+     "start_time": "2025-08-09T16:35:56.178965Z"
     }
    },
    "cell_type": "code",
@@ -91,7 +91,7 @@
      ]
     }
    ],
-   "execution_count": 41
+   "execution_count": 70
   },
   {
    "metadata": {},
@@ -102,15 +102,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.529546Z",
-     "start_time": "2025-08-09T16:28:18.521840Z"
+     "end_time": "2025-08-09T16:35:56.203304Z",
+     "start_time": "2025-08-09T16:35:56.195649Z"
     }
    },
    "cell_type": "code",
    "source": "raw_df = pd.read_csv(raw_dataset)",
    "id": "bb57ce44f0659b10",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 71
   },
   {
    "metadata": {},
@@ -121,8 +121,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.542534Z",
-     "start_time": "2025-08-09T16:28:18.534150Z"
+     "end_time": "2025-08-09T16:35:56.220719Z",
+     "start_time": "2025-08-09T16:35:56.212437Z"
     }
    },
    "cell_type": "code",
@@ -295,13 +295,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 43
+   "execution_count": 72
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.557643Z",
-     "start_time": "2025-08-09T16:28:18.551796Z"
+     "end_time": "2025-08-09T16:35:56.236065Z",
+     "start_time": "2025-08-09T16:35:56.230263Z"
     }
    },
    "cell_type": "code",
@@ -481,12 +481,12 @@
        "</div>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 44
+   "execution_count": 73
   },
   {
    "metadata": {},
@@ -503,8 +503,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.608233Z",
-     "start_time": "2025-08-09T16:28:18.605224Z"
+     "end_time": "2025-08-09T16:35:56.317530Z",
+     "start_time": "2025-08-09T16:35:56.313982Z"
     }
    },
    "cell_type": "code",
@@ -515,7 +515,7 @@
    ],
    "id": "79a13b6b1f4616e6",
    "outputs": [],
-   "execution_count": 45
+   "execution_count": 74
   },
   {
    "metadata": {},
@@ -530,8 +530,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.644015Z",
-     "start_time": "2025-08-09T16:28:18.640216Z"
+     "end_time": "2025-08-09T16:35:56.376711Z",
+     "start_time": "2025-08-09T16:35:56.372388Z"
     }
    },
    "cell_type": "code",
@@ -546,7 +546,7 @@
    ],
    "id": "36384297ad9e6232",
    "outputs": [],
-   "execution_count": 46
+   "execution_count": 75
   },
   {
    "metadata": {},
@@ -560,8 +560,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.657843Z",
-     "start_time": "2025-08-09T16:28:18.654870Z"
+     "end_time": "2025-08-09T16:35:56.395073Z",
+     "start_time": "2025-08-09T16:35:56.391429Z"
     }
    },
    "cell_type": "code",
@@ -573,13 +573,13 @@
    ],
    "id": "a068a59bb9cf0aa6",
    "outputs": [],
-   "execution_count": 47
+   "execution_count": 76
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.663050Z",
-     "start_time": "2025-08-09T16:28:18.661600Z"
+     "end_time": "2025-08-09T16:35:56.406815Z",
+     "start_time": "2025-08-09T16:35:56.404898Z"
     }
    },
    "cell_type": "code",
@@ -594,7 +594,7 @@
      ]
     }
    ],
-   "execution_count": 48
+   "execution_count": 77
   },
   {
    "metadata": {},
@@ -605,8 +605,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.690474Z",
-     "start_time": "2025-08-09T16:28:18.669674Z"
+     "end_time": "2025-08-09T16:35:56.444830Z",
+     "start_time": "2025-08-09T16:35:56.419228Z"
     }
    },
    "cell_type": "code",
@@ -615,7 +615,6 @@
     "clean_prescaled_df = df.copy()\n",
     "\n",
     "clean_prescaled_df['residence_type'] = clean_prescaled_df['residence_type'].map({0: 'Urban', 1: 'Rural'})\n",
-    "clean_prescaled_df['gender'] = clean_prescaled_df['gender'].map({0: 'Female', 1: 'Male'})\n",
     "clean_prescaled_df['gender'] = clean_prescaled_df['gender'].map({0: 'Female', 1: 'Male'})\n",
     "\n",
     "clean_prescaled_df['smoking_status'] = clean_prescaled_df['smoker'].map({1: \"Smoker\", -1: \"Non-Smoker\", 0: \"Unknown\"})\n",
@@ -635,9 +634,182 @@
      "text": [
       "✔️ Clean (pre-scaled) saved → data/processed/clean_preScaled_data.csv\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "   age  gender  chest_pain_type  blood_pressure  cholesterol  max_heart_rate  \\\n",
+       "0   24    Male                4             250          139             212   \n",
+       "1   29  Female                4             132          187             147   \n",
+       "2   46  Female                3             271          185             193   \n",
+       "3   73  Female                2             102          200             125   \n",
+       "4   49    Male                3              91          163             192   \n",
+       "\n",
+       "   exercise_angina  plasma_glucose  skin_thickness  insulin    bmi  \\\n",
+       "0                0           108.0            33.0    109.0  38.00   \n",
+       "1                0           202.0            42.0    129.0  25.59   \n",
+       "2                0           149.0            43.0    102.0  37.89   \n",
+       "3                0           105.0            77.0    165.0  18.66   \n",
+       "4                0           162.0            31.0    170.0  12.77   \n",
+       "\n",
+       "   diabetes_pedigree  hypertension  heart_disease residence_type  \\\n",
+       "0              0.480             1              1          Urban   \n",
+       "1              0.284             1              1          Urban   \n",
+       "2              2.472             1              0          Rural   \n",
+       "3              1.472             0              1          Rural   \n",
+       "4              0.538             1              1          Rural   \n",
+       "\n",
+       "  smoking_status  \n",
+       "0         Smoker  \n",
+       "1        Unknown  \n",
+       "2     Non-Smoker  \n",
+       "3         Smoker  \n",
+       "4         Smoker  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>chest_pain_type</th>\n",
+       "      <th>blood_pressure</th>\n",
+       "      <th>cholesterol</th>\n",
+       "      <th>max_heart_rate</th>\n",
+       "      <th>exercise_angina</th>\n",
+       "      <th>plasma_glucose</th>\n",
+       "      <th>skin_thickness</th>\n",
+       "      <th>insulin</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>diabetes_pedigree</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>heart_disease</th>\n",
+       "      <th>residence_type</th>\n",
+       "      <th>smoking_status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>4</td>\n",
+       "      <td>250</td>\n",
+       "      <td>139</td>\n",
+       "      <td>212</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>38.00</td>\n",
+       "      <td>0.480</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>Smoker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>4</td>\n",
+       "      <td>132</td>\n",
+       "      <td>187</td>\n",
+       "      <td>147</td>\n",
+       "      <td>0</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>25.59</td>\n",
+       "      <td>0.284</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>46</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>3</td>\n",
+       "      <td>271</td>\n",
+       "      <td>185</td>\n",
+       "      <td>193</td>\n",
+       "      <td>0</td>\n",
+       "      <td>149.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>37.89</td>\n",
+       "      <td>2.472</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>Non-Smoker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>73</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>2</td>\n",
+       "      <td>102</td>\n",
+       "      <td>200</td>\n",
+       "      <td>125</td>\n",
+       "      <td>0</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>18.66</td>\n",
+       "      <td>1.472</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>Smoker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>3</td>\n",
+       "      <td>91</td>\n",
+       "      <td>163</td>\n",
+       "      <td>192</td>\n",
+       "      <td>0</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>12.77</td>\n",
+       "      <td>0.538</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>Smoker</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 49
+   "execution_count": 78
   },
   {
    "metadata": {},
@@ -648,8 +820,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.715459Z",
-     "start_time": "2025-08-09T16:28:18.702243Z"
+     "end_time": "2025-08-09T16:35:56.498865Z",
+     "start_time": "2025-08-09T16:35:56.479761Z"
     }
    },
    "cell_type": "code",
@@ -687,7 +859,7 @@
      ]
     }
    ],
-   "execution_count": 50
+   "execution_count": 79
   },
   {
    "metadata": {},
@@ -698,8 +870,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.724575Z",
-     "start_time": "2025-08-09T16:28:18.721598Z"
+     "end_time": "2025-08-09T16:35:56.533738Z",
+     "start_time": "2025-08-09T16:35:56.528875Z"
     }
    },
    "cell_type": "code",
@@ -725,7 +897,7 @@
    ],
    "id": "8c81c1d9e06bcb97",
    "outputs": [],
-   "execution_count": 51
+   "execution_count": 80
   },
   {
    "metadata": {},
@@ -736,8 +908,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.775808Z",
-     "start_time": "2025-08-09T16:28:18.726846Z"
+     "end_time": "2025-08-09T16:35:56.686913Z",
+     "start_time": "2025-08-09T16:35:56.559229Z"
     }
    },
    "cell_type": "code",
@@ -786,7 +958,7 @@
      ]
     }
    ],
-   "execution_count": 52
+   "execution_count": 81
   },
   {
    "metadata": {},
@@ -806,8 +978,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-09T16:28:18.897945Z",
-     "start_time": "2025-08-09T16:28:18.790330Z"
+     "end_time": "2025-08-09T16:35:56.875700Z",
+     "start_time": "2025-08-09T16:35:56.747030Z"
     }
    },
    "cell_type": "code",
@@ -995,12 +1167,12 @@
        "</div>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 53
+   "execution_count": 82
   }
  ],
  "metadata": {
